Set explicit dimensions of the gravatar image to avoid jumpiness on rendering; use better vertical alignment

--- a/pootle/static/css/style.css
+++ b/pootle/static/css/style.css
@@ -915,7 +915,9 @@ html[dir="rtl"] .last-action
 
 .last-action img
 {
-    vertical-align: middle;
+    vertical-align: text-bottom;
+    width: 20px;
+    height: 20px;
 }
 
 .last-action .extra-item-meta
